--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^2.2.0",
     "jquery": "^3.1.1",
-    "angular-validation": "^1.4.2"
+    "angular-validation": "^1.4.2",
+    "angular-resource": "^1.5.8"
   }
 }
