--- a/app/data/projectList.json
+++ b/app/data/projectList.json
@@ -1,6 +1,6 @@
 {
   "projects":[{
-    "name":"一号项目",
+    "name":"模拟项目001",
     "proportion":"50,462.01",
     "proportionType":"套内面积",
     "openRate":"89.12%",
