--- a/app/data/projectList.json
+++ b/app/data/projectList.json
@@ -1,19 +1,20 @@
 {
   "projects":[{
     "name":"模拟项目001",
-    "proportion":"50,462.01",
-    "proportionType":"套内面积",
+    "proportion":"62,000.00",
+    "proportionType":"建筑面积",
     "openRate":"89.12%",
-    "income":435.88,
-    "irr":"6.12%",
-    "complete":"90.32%",
+    "income":2774.09,
+    "opendate":"2013-9-30",
+    "irr":"7.26%",
+    "complete":"74.76%",
     "noi":{
-        "monthly":216.57,
-        "yearly":"2,652.32"
+        "monthly":220.52,
+        "yearly":"2,386.91"
     },
     "asset":{
-      "value":"45,569",
-      "rate":"5.82%"
+      "value":"34,000.00",
+      "rate":"7.02%"
     },
     "pm":{
       "name":"王总",
