--- a/app/data/data_1/projectList.json
+++ b/app/data/data_1/projectList.json
@@ -1,8 +1,8 @@
 {
   "projects":[{
-    "name":"七宝宝龙广场",
+    "name":"模拟项目001",
     "proportion":"50,462.01",
-    "proportionType":"套内面积",
+    "proportionType":"建筑面积",
     "openRate":"89.12%",
     "income":435.88,
     "irr":"6.12%",
@@ -26,16 +26,16 @@
     "position":"上海"
   },
     {
-      "name":"模拟项目002",
-      "proportion":"50,462.01",
-      "proportionType":"套内面积",
+      "name":"七宝宝龙广场",
+      "proportion":"75,149.4",
+      "proportionType":"建筑面积",
       "openRate":"89.12%",
-      "income":435.88,
+      "income":15652.47,
       "irr":"6.12%",
       "complete":"90.32%",
       "noi":{
-        "monthly":216.57,
-        "yearly":"2,652.32"
+        "monthly":188.64,
+        "yearly":"557.13"
       },
       "asset":{
         "value":"45,569",
