--- a/app/data/projectList.json
+++ b/app/data/projectList.json
@@ -42,7 +42,7 @@
         "rate":"0.50%"
       },
       "pm":{
-        "name":"张总",
+        "name":"王总",
         "title":"营运负责人",
         "figure":"male.png",
         "teamNum":12,
